page , add , google link

--- a/page.html
+++ b/page.html
@@ -17,4 +17,5 @@
         </div>
     <span> welcome  to Sudan</span>
         <h3>Thanks to vist</h3>
+        <a href="google.com">Google</a>
     </body>
