--- a/newPage.html
+++ b/newPage.html
@@ -15,7 +15,9 @@
         
     <h1>Hello world '' Hello git App</h1>    
         </div>
-    <span> welcome  to Sudan</span>
+        
+        <h2>Welcome verison control systems</h2>
+        <h3>Thanks</h3>
         <h3>Thanks to vist</h3>
         <a href="google.com">Google</a>
     </body>
