Ad year 2024 & Month 5

--- a/newPage.html
+++ b/newPage.html
@@ -19,5 +19,6 @@
         <h2>Welcome verison control systems</h2>
         <h3>Thanks</h3>
         <h3>Thanks to vist</h3>
+        <p>Year of 2024</p>
         <a href="google.com">Google</a>
     </body>
