--- a/newPage.html
+++ b/newPage.html
@@ -20,5 +20,7 @@
         <h3>Thanks</h3>
         <h3>Thanks to vist</h3>
         <p>Year of 2024</p>
+        <p>Month 5 </p>
         <a href="google.com">Google</a>
+        <h1>Line 1</h1>
     </body>
