--- a/newPage.html
+++ b/newPage.html
@@ -23,5 +23,7 @@
         <p>Month 5 </p>
         <a href="google.com">Google</a>
         <h1>Line 1</h1>
+        <h1>Line 2</h1>
         <a>Prgaraph 1 </a>
+                <a>Prgaraph 2 </a>
     </body>
