Add code to newPge b1

--- a/newPage.html
+++ b/newPage.html
@@ -25,5 +25,8 @@
         <h1>Line 1</h1>
         <h1>Line 2</h1>
         <a>Prgaraph 1 </a>
+        
                 <a>Prgaraph 2 </a>
+        
+        <h2>Add brunch b1</h2>
     </body>
