--- a/newPage.html
+++ b/newPage.html
@@ -29,4 +29,6 @@
                 <a>Prgaraph 2 </a>
         
         <h2>Add brunch b1</h2>
+                <h2>update brunch b1</h2>
+
     </body>
