--- a/newPage.html
+++ b/newPage.html
@@ -26,4 +26,6 @@
         <h1>Line 2</h1>
         <a>Prgaraph 1 </a>
                 <a>Prgaraph 2 </a>
+        
+        <h1>add line to master page</h1>
     </body>
