Add new branch b3

--- a/newPage.html
+++ b/newPage.html
@@ -28,4 +28,5 @@
                 <a>Prgaraph 2 </a>
         
         <h1>add line to master page</h1>
+        <h3>Add new branch b3</h3>
     </body>
