--- a/newPage.html
+++ b/newPage.html
@@ -29,4 +29,5 @@
         
         <h1>add line to master page</h1>
         <h3>Add new branch b3</h3>
+        <h3>welcome to b3</h3>
     </body>
