Add line  to b3

--- a/newPage.html
+++ b/newPage.html
@@ -30,4 +30,5 @@
         <h1>add line to master page</h1>
         <h3>Add new branch b3</h3>
         <h3>welcome to b3</h3>
+        <h3>Hello branch b3</h3>
     </body>
