--- a/newPage.html
+++ b/newPage.html
@@ -31,4 +31,6 @@
         <h3>Add new branch b3</h3>
         <h3>welcome to b3</h3>
         <h3>Hello branch b3</h3>
+        <h3> new line</h3>
+        <h4>Add new branch b01</h4>
     </body>
