Update master file - newLine

--- a/newPage.html
+++ b/newPage.html
@@ -15,7 +15,7 @@
         
     <h1>Hello world '' Hello git App</h1>    
         </div>
-        
+        <h1>THIS IS THE MASTER FILE FOR PROJECT</h1>
         <h2>Welcome verison control systems</h2>
         <h3>Thanks</h3>
         <h3>Thanks to vist</h3>
