--- a/newPage.html
+++ b/newPage.html
@@ -32,5 +32,5 @@
         <h3>welcome to b3</h3>
         <h3>Hello branch b3</h3>
         <h3> new line</h3>
-        <h4>Add new branch b01</h4>
+        <h4>Add new branch b01 - welcome</h4>
     </body>
