--- a/newPage.html
+++ b/newPage.html
@@ -16,6 +16,8 @@
     <h1>Hello world '' Hello git App</h1>    
         </div>
         <h1>THIS IS THE MASTER FILE FOR PROJECT .01</h1>
+         <h2>welcome MASTER FILE FOR PROJECT .01</h2>
+
         <h2>Welcome verison control systems</h2>
         <h3>Thanks</h3>
         <h3>Thanks to vist</h3>
@@ -25,7 +27,7 @@
         <h1>Line 1</h1>
         <h1>Line 2</h1>
         <a>Prgaraph 1 </a>
-                <a>Prgaraph 2 </a>
+        <a>Prgaraph 2 </a>
         
         <h1>add line to master page</h1>
         <h3>Add new branch b3</h3>
