Add new line from local

--- a/newPage.html
+++ b/newPage.html
@@ -43,7 +43,7 @@
                 <h2>update brunch b1</h2>
         <h1> remote repository</h1>
         <h2>Add new branch b02</h2>
-        
+        <h2>Add new line from local to main file</h2>
 
         
     </body>
