Adding new line to main/origin

--- a/newPage.html
+++ b/newPage.html
@@ -48,6 +48,7 @@
             <h1> remote repository</h1>
             <h2>Add new branch b02</h2>
 
+            <h2>Pull and merge in the local</h2>
 
         
     </body>
